--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 
           <div class="conText">
             <div>
-              <p>A high school student with an interest in 
-                <br>working as</p>
+              <p>A high school student with an interest in <br />working as</p>
               <div id="flip">
                 <div>
                   <div><p>Full Stack Developer</p></div>
@@ -110,7 +109,6 @@
         </div>
       </div>
     </div>
-
 
     <!-- About Page -->
     <div id="about">
@@ -166,6 +164,177 @@
       </div>
       <div class="container-fluid wcid"></div>
     </div>
+
+    <!-- Work Page -->
+    <div id="work">
+      <div class="container work">
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <div class="cardItems">
+                <div class="card">
+                  <img
+                    src="./properties/picture/dagang.jpeg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Selling snacks such as "Basreng" and "Spring Rolls" during
+                      my first year of high school.
+                    </p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img
+                    src="./properties/picture/panitia1.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Serving as a committee member for the Independence Day
+                      event in my residential cluster and participating as the
+                      event host (MC).
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="cardItems">
+                <div class="card">
+                  <img
+                    src="./properties/picture/band.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Participated in the closing night of the Independence Day
+                      event by performing as a guitarist.
+                    </p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img
+                    src="./properties/picture/lombamasak.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Participated in a cooking competition in my neighborhood
+                      and won 3rd place.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="cardItems">
+                <div class="card">
+                  <img
+                    src="./properties/picture/panitia2.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      The following year, I was invited again to join the
+                      committee for the Independence Day event and actively
+                      participated in discussions about organizing the upcoming
+                      activities.
+                    </p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img
+                    src="./properties/picture/band.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Spent my free time working as a ballboy from 2021 to 2024.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Page -->
+    <footer id="contact">
+      <div class="footerOne">
+        <div class="footerLogo">
+          <h2>Brian Zakariya</h2>
+          <p>Jakarta, Indonesia</p>
+        </div>
+        <div class="footerBio">
+          <div class="phone">
+            <img src="/properties/picture/icon/phone.png" alt="" />
+            <p>+62 858 8253 xxxx</p>
+          </div>
+          <div class="email">
+            <img src="/properties/picture/icon/img.icons8.png" alt="" />
+            <p>brianzakariya@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footerTwo">
+        <div class="footerSocialMedia">
+          <a target="_blank" href="https://github.com/brianzakariyahusein"
+            ><img src="/properties/picture/icon/github_3291667.png" alt=""
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/brianzakariya/?hl=en"
+            ><img src="/properties/picture/icon/social_15707749.png" alt=""
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/brian-zakariya-9a1583309/"
+            ><img src="/properties/picture/icon/linked.png" alt=""
+          /></a>
+        </div>
+        <div class="footerLink">
+          <a href="#home">home</a>
+          <a href="#about">about</a>
+          <a href="#work">work</a>
+          <a href="#contact">contact</a>
+        </div>
+        <div class="footerLogos">
+          <h2>Brian Zakariya</h2>
+        </div>
+      </div>
+    </footer>
 
     <!-- js script -->
     <script src="/properties/js/script.js"></script>
